# moboard

./: README.md  config.py  main.py  moboard.py  pyproject.toml
moboard/: backend.py  controllers.py  db.py  routes.py
moboard/models/: __init__.py  message.py  newsgroup.py
moboard/views/: articles.tpl  index.tpl  newsgroups.tpl  single_article.tpl
moboard/views/layouts/: footer.tpl  header.tpl
tests/: test_moboard.py
