[tool.poetry]
name = "moboard"
version = "0.1.0"
description = ""
authors = ["Thomas Schmitt <t.e.schmitt@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
