[tool.poetry]
name = "moboard"
version = "0.1.0"
description = ""
authors = ["Thomas Schmitt <t.e.schmitt@posteo.de>"]

[tool.poetry.dependencies]
python = ">=3.5,<3.11"
bottle = "^0.12.23"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[moboard]
server_address = "127.0.0.1"
server_port = 1190
group = "all"
load_articles = 20


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
